--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
